# xournalpp

./: .gitignore  CMakeLists.txt
mac-setup/: .gitignore  CI_jhbuild.sh  build-and-install.sh  build-app.sh  bundle-aria2.sh  bundle-copilot.sh  bundle-microtex.sh  bundle-tectonic.sh  extract-gtk-osx-python-requirements.sh  install-jhbuild-standalone.sh  jhbuild-python-requirements.txt  jhbuild-with-env.sh  xournalpp.bundle
readme/: JHBuildMacOS.md
src/: CMakeLists.txt
src/ai/: LLMEngine.cpp  LLMEngine.h  PDFContextExtractor.cpp  PDFContextExtractor.h
src/chat/: ChatInput.cpp  ChatInput.h  ChatMessage.cpp  ChatMessage.h  ChatPanel.cpp  ChatPanel.h  ContextSelector.cpp  ContextSelector.h  ModelManager.cpp  ModelManager.h
src/core/: CMakeLists.txt
src/core/control/: Control.cpp  Control.h  XournalMain.cpp
src/core/control/actions/: ActionProperties.h
src/core/control/jobs/: Scheduler.cpp
src/core/control/settings/: Settings.cpp  Settings.h
src/core/enums/: Action.enum.h
src/core/gui/: DockIconUpdater.h  DockIconUpdater.mm  Layout.cpp  Layout.h  MainWindow.cpp  MainWindow.h
src/latex/: LatexCache.cpp  LatexCache.h  LatexParser.cpp  LatexParser.h  LatexRenderer.cpp  LatexRenderer.h
src/util/: PathUtil.cpp
src/util/include/util/: PathUtil.h
src/xoj-preview-extractor/: CMakeLists.txt
ui/: mainmenubar.xml  xournalpp.css
